# pyflyer-rs

./: .gitignore  .gitmodules  Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
src/: aircraft.rs  ggez_example.rs  lib.rs  world.rs
