[package]
name = "pyflyer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyflyer"
crate-type = ["cdylib"]

[dependencies]
flyer-rs = {path = "../flyer-rs"}
pyo3 = "0.19.0"
aerso = {git = "https://github.com/rob-clarke/aerso.git"}
tiny-skia = "0.11.1"
