[package]
name = "pyflyer"
version = "0.1.0"
authors = ["Alexander Quessy"]
edition = "2021"
description = "A PyO3 library providing methods to access the 12DoF non-linear aircaft simulation found in flyer-rs within a Python program. This library was aimed to link flyer-rs to FlyerEnv."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyflyer"
crate-type = ["cdylib"]

[dependencies]
flyer-rs = {path = "flyer-rs"}
pyo3 = "0.19.0"
aerso = {git = "https://github.com/rob-clarke/aerso.git"}
tiny-skia = "0.11.1"
nalgebra = "0.32.3"
argmin = "0.8.1"